Fixed day calendar appointments overlapping

--- a/src/pages/Calendar/styles.scss
+++ b/src/pages/Calendar/styles.scss
@@ -848,23 +848,22 @@
       }
 
       .appointment-item {
+        flex-direction: column;
         cursor: pointer;
         user-select: none;
         margin-top: .1rem;
         margin-bottom: .1rem;
         border-radius: .2rem;
         display: flex;
-        align-items: center;
-        padding: .2rem;
-        height: 30px;
+        align-items: flex-start;
+        justify-content: center;
+        padding: .2rem .5rem;
 
         .patient-name {
-          margin-left: .5rem;
           font-family: Inter, sans-serif;
           font-style: normal;
           font-weight: normal;
           font-size: 11px;
-          line-height: 24px;
           color: #34354C;
         }
       }
